--- a/Home.html
+++ b/Home.html
@@ -81,11 +81,11 @@
 <body>
     <!-- Barra de menus -->
     <ul class="menu-bar">
-        <li><a href="https://beatrizbonetto.github.io/Home/">Início</a></li>
-       <li><a href="https://beatrizbonetto.github.io/Produto/">Produtos</a></li>
-        <li><a href="https://beatrizbonetto.github.io/orcamento/#orcamento">Orçamento</a></li>
-        <li><a href="https://beatrizbonetto.github.io/informacoes/">Informações</a></li>
-        <li><a href="https://beatrizbonetto.github.io/autores/">Autores</a></li>
+        <li><a href="./Home.html">Início</a></li>
+       <li><a href="./Pages/produtos.html">Produtos</a></li>
+        <li><a href="./Pages/orcamento.html">Orçamento</a></li>
+        <li><a href="./Pages/informacoes">Informações</a></li>
+        <li><a href="./Pages/autores">Autores</a></li>
     </ul>
 
     <div class="container my-5">
