--- a/Pages/autores.html
+++ b/Pages/autores.html
@@ -85,14 +85,14 @@
 
 <body>
 
-    <!-- Barra de menus -->
-    <ul class="menu-bar">
-        <li><a href="https://beatrizbonetto.github.io/Home/">Início</a></li>
-    <li><a href="https://beatrizbonetto.github.io/Produto/">Produtos</a></li>
-        <li><a href="https://beatrizbonetto.github.io/orcamento/#orcamento">Orçamento</a></li>
-        <li><a href="https://beatrizbonetto.github.io/informacoes/">Informações</a></li>
-        <li><a href="https://beatrizbonetto.github.io/autores/">Autores</a></li>
-    </ul> 
+   <!-- Barra de menus -->
+   <ul class="menu-bar">
+    <li><a href="./Home.html">Início</a></li>
+   <li><a href="./Pages/produtos.html">Produtos</a></li>
+    <li><a href="./Pages/orcamento.html">Orçamento</a></li>
+    <li><a href="./Pages/informacoes">Informações</a></li>
+    <li><a href="./Pages/autores">Autores</a></li>
+</ul>
     <!--Fim Barra de Menu -->
 
     <div class="container my-5">
