--- a/Pages/autores.html
+++ b/Pages/autores.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Esse é o css que foi separado do HTML-->
-    <!--<style>
+    <style>
         /* Estilos para a barra de menus */
         ul.menu-bar {
             list-style-type: none;
@@ -75,7 +75,7 @@
             margin-top: 10px;
             /* Espaçamento entre a imagem e o nome */
         }
-    </style>-->
+    </style>
     <!--Esse é o css que foi separado do HTML-->
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
